# 6DOF_Robot_Arm

./: arduino_firsttry.ino  in_step.txt  out_step.txt  sketch_jan24a.ino
install/: local_setup.sh  setup.sh
install/dynamixel_hardware/include/dynamixel_hardware/: dynamixel_hardware.hpp  visiblity_control.h
log/: latest_build
src/nick_bot/: CMakeLists.txt  package.xml
src/nick_bot/config/: moveit.rviz  my_controllers.yaml  nickbot_controllers.yaml  step_and_serv_controllers.yaml  stepper_controllers.yaml
src/nick_bot/description/: robot_core.xacro  ros2_control.xacro  ros2_controlGAZEBO.xacro
src/nick_bot/launch/: computer.launch.py  full_launch_simWORKING.launch.py  raspberry.launch.py  real_robot.launch.py
src/nick_bot/launch_ph/: controllers.launch.py  gazebo.launch.py
src/nick_bot/meshes/: base_link.STL  end_effector.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL
src/nick_bot/urdf/: nick_bot.urdf  nick_bot_MODIF.urdf  nick_bot_moveit.urdf  takenout
src/nick_bot/urdf1/: jon  robot.urdf.xacro  robot_control.xacro  robot_core.xacro
src/nick_bot_moveit_config/: .setup_assistant  package.xml
src/nick_bot_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  nick_bot.ros2_control.xacro  nick_bot.srdf  o_planning.yaml  ros2_controllers.yaml
src/stepper_interface/: CMakeLists.txt  package.xml  stepper_interface.xml
src/stepper_interface/include/stepper_interface/: arduino_comm.hpp  stepper_interface.hpp
src/stepper_interface/src/: arduino_comm.cpp  stepper_interface.cpp
(+181 files in other folders)
